# shellmake

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  io.c  main.c  parser.c  shf_string_validation.c  shfile.c  string_validation.c
docs/: Build System.md  Environment Variables.md  Hello.md  README.md  build_file.md  env_vars.md  init.md
include/: env_var.h  event_list.h  events.h  shellmake.h  shf_string_validation.h  shfile.h  str_arr.h  strvec.h
include/buildfile/: bf_cmd.h  bfile.h  buildfile_cmd.h  buildfille.h  cmd.h  file_struct.h
include/cli/: defines.h  io.h
include/file/: file_struct.h  shfile.h  string_validation.h
include/interpreter/: lexer.h  parser.h
include/pipe/: init_argv.h
include/pipeline/: init_argv.h  lexer.h
include/shared/: strvec.h
include/shared/file/: file_struct.h
src/: env_var.c  event.c  event_list.c  file_struct.c  io.c  main.c  parser.c  parser_pipe.c  pipe_buildfile.txt  shfile.c  str_arr.c  string_validation.c  strvec.c
src/buildfile/: bf_cmd.c  bf_file.c  bf_parse.c  bfile.c  buildfile_cmd.c  buildfile_file.c  buildfile_json_parse.c  cmd.c  json_parse.c
src/interpreter/: lexer.c
src/pipe/: init_argv.c
src/pipeline/: init_argv.c  lexer.c
src/shared/: strvec.c
src/shared/file/: file_struct.c  string_validation.c
tests/: ShellMake.json  build.json  concept.txt  concepts.sh  tst_getcontext.sh
tests/concepts/: build.json
